# opencl-generator

./: CMakeLists.txt  README.md  hpm-opencl-transformation.cpp
include/: clang-frontend.hpp  ir.hpp  traversal.hpp  util.hpp
include/clang-frontend/: Consumer.hpp  Environment.hpp  Match.hpp  Modifications.hpp  Visitor.hpp  visitors.hpp
include/clang-frontend/transformations/: AddDeclsToKernel.hpp  ExtractMemberCalls.hpp  FunctionNames.hpp  GetDofs.hpp  HandleKernel.hpp  HandleNames.hpp  HandleOperatorCalls.hpp  InlineFunctions.hpp  MemberCallToFunctionCalls.hpp  PrintFunctions.hpp  PropagateGlobal.hpp  RemoveRedundantConstructionExpressions.hpp  RemoveReferences.hpp  TranslateFreeLoops.hpp  TranslateGet.hpp  TranslateLocalBufferDecls.hpp  UnqualifyNames.hpp  Vec2FloatNTransform.hpp
include/ir/: AddressOf.hpp  ArraySubscript.hpp  BinaryOperator.hpp  Block.hpp  C_ConstructExpression.hpp  Cast.hpp  ConstructExpression.hpp  ForLoop.hpp  Function.hpp  FunctionCall.hpp  If.hpp  Lambda.hpp  Literal.hpp  MemberAccess.hpp  MemberCall.hpp  Name.hpp  NamedCast.hpp  NotHandled.hpp  NullStmt.hpp  Parenthesis.hpp  Printable.hpp  Qualifier.hpp  Return.hpp  Statement.hpp  TemplateTemplate.hpp  ThisPtr.hpp  Type.hpp  UnaryOperator.hpp  Unknown.hpp  Variable.hpp  VariableDeclaration.hpp
include/traversal/: Transformer.hpp  printable_case.hpp  std_transforms.hpp
include/util/: PolymorhicValue.hpp  flat_vector.hpp  for_each_interleave.hpp  print.hpp  print_with_delimiter.hpp  visit_all.hpp
tests/: CMakeLists.txt  test_util.hpp  tests.cpp
(+5 files in other folders)
